removed list separators, added escape documentation, added sample page content, updated title

--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Example Disclosure (Show/Hide) for Navigation Menu | WAI-ARIA Authoring
+<title>Disclosure Navigation Menu Example | WAI-ARIA Authoring
   Practices 1.1</title>
 
   <!--  Core js and css shared by all examples; do not modify when using this template. -->
@@ -52,16 +52,16 @@
             <button aria-expanded="true" aria-controls="id_about_menu">About</button>
             <ul id="id_about_menu">
               <li>
-                <a href="#overview">Overview</a>
+                <a href="#mythical-page-content">Overview</a>
               </li>
               <li>
-                <a href="#admin">Administration</a>
+                <a href="#mythical-page-content">Administration</a>
               </li>
               <li>
-                <a href="#facts">Facts</a>
+                <a href="#mythical-page-content">Facts</a>
               </li>
               <li>
-                <a href="#campus-tours">Campus Tours</a>
+                <a href="#mythical-page-content">Campus Tours</a>
               </li>
             </ul>
           </li>
@@ -69,23 +69,22 @@
             <button aria-expanded="true" aria-controls="id_admissions_menu">Admissions</button>
             <ul id="id_admissions_menu">
               <li>
-                <a href="#apply">Apply</a>
+                <a href="#mythical-page-content">Apply</a>
               </li>
               <li>
-                <a href="#">Tuition</a>
+                <a href="#mythical-page-content">Tuition</a>
               </li>
               <li>
-                <a href="#signup">Sign Up</a>
-              </li>
-              <li role="separator"></li>
-              <li>
-                <a href="#visit">Visit</a>
+                <a href="#mythical-page-content">Sign Up</a>
               </li>
               <li>
-                <a href="#photo">Photo Tour</a>
+                <a href="#mythical-page-content">Visit</a>
               </li>
               <li>
-                <a href="#connect">Connect</a>
+                <a href="#mythical-page-content">Photo Tour</a>
+              </li>
+              <li>
+                <a href="#mythical-page-content">Connect</a>
               </li>
             </ul>
           </li>
@@ -93,34 +92,37 @@
             <button aria-expanded="true" aria-controls="id_academics_menu">Academics</button>
             <ul id="id_academics_menu">
               <li>
-                <a href="#colleges">Colleges &amp; Schools</a>
+                <a href="#mythical-page-content">Colleges &amp; Schools</a>
               </li>
               <li>
-                <a href="#programs">Programs of Study</a>
+                <a href="#mythical-page-content">Programs of Study</a>
               </li>
               <li>
-                <a href="#honors">Honors Programs</a>
+                <a href="#mythical-page-content">Honors Programs</a>
               </li>
               <li>
-                <a href="#online">Online Courses</a>
-              </li>
-              <li role="separator"></li>
-              <li>
-                <a href="#explorer">Course Explorer</a>
+                <a href="#mythical-page-content">Online Courses</a>
               </li>
               <li>
-                <a href="#register">Register for Class</a>
+                <a href="#mythical-page-content">Course Explorer</a>
               </li>
               <li>
-                <a href="#academic">Academic Calendar</a>
+                <a href="#mythical-page-content">Register for Class</a>
               </li>
               <li>
-                <a href="#tanscripts">Transcripts</a>
+                <a href="#mythical-page-content">Academic Calendar</a>
+              </li>
+              <li>
+                <a href="#mythical-page-content">Transcripts</a>
               </li>
             </ul>
           </li>
         </ul>
       </nav>
+      <div id="mythical-page-content" class="disclosure-pagecontent" tabindex="-1" role="region" aria-label="Mythical University sample page content">
+        <h3 id="mythical-page-heading">Mythical University</h3>
+        <p>Sample content section. Activating a link above will update and navigate to this region.</p>
+      </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
@@ -138,7 +140,7 @@
         Arrow keys supplement, but do not replace, tabbing between the top-level disclosure buttons. Home and End likewise allow jumping to the first and last button.
       </li>
       <li>
-        Escape pressed when focus is within the navigation menu closes any open dropdown menus. Moving focus out of the navigation region also closes open dropdowns.
+        Escape pressed when focus is within the navigation menu closes any open dropdown menus. Moving focus out of the navigation region also closes open dropdowns. Implementing the escape key behavior is necessary to meet the WCAG 2.1 <a href="https://www.w3.org/WAI/WCAG21/Understanding/content-on-hover-or-focus.html">1.4.13: Content on Hover or Focus</a> criterion.
       </li>
       <li>
         Arrow key support prevents the default page scroll behavior when focus is on the disclosure menu.
