update tests for new disclosure functionality

--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -47,7 +47,7 @@
         Include arrow key navigation
       </label>
       <nav aria-label="Mythical University">
-        <ul class="disclosure-nav">
+        <ul id="exTest" class="disclosure-nav">
           <li>
             <button aria-expanded="true" aria-controls="id_about_menu">About</button>
             <ul id="id_about_menu">
@@ -172,7 +172,7 @@
             <kbd>Tab</kbd>
           </th>
           <td>
-              Moves keyboard focus between top-level buttons, and into any open menu
+              Moves keyboard focus between top-level buttons, and into any open menu.
           </td>
         </tr>
         <tr data-test-id="key-enter-space">
@@ -190,7 +190,7 @@
             <kbd>Escape</kbd>
           </th>
           <td>
-              Closes the open dropdown menu
+              Closes the open dropdown menu.
           </td>
         </tr>
         <tr data-test-id="key-arrows">
@@ -198,7 +198,7 @@
             <kbd>Arrow keys (optional)</kbd>
           </th>
           <td>
-              Moves focus between the top-level disclosure buttons.
+              Moves focus between the top-level disclosure buttons and between open dropdown menu links.
           </td>
         </tr>
         <tr data-test-id="key-home-end">
@@ -206,7 +206,7 @@
             <kbd>Home / End (optional)</kbd>
           </th>
           <td>
-              Moves focus to the first or last disclosure button
+              Moves focus to the first or last disclosure button, or first or last open menu links.
           </td>
         </tr>
       </tbody>
