Address some feedback

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4268,7 +4268,7 @@ However, most authors do not need detailed understanding of the algorithms since
 										<td>
                       <ul>
                         <li>Naming is necessary when two complementary landmark regions are present on the same page.</li>
-                        <li>naming  is recommended even when one complementary region is present to help users understand the purpose of the region's content when navigating among landmark regions.</li>
+                        <li>Naming is recommended even when one complementary region is present to help users understand the purpose of the region's content when navigating among landmark regions.</li>
                         <li>Named using <code>aria-labelledby</code> if a visible title is present, otherwise with <code>aria-label</code>.</li>
                       </ul>
                     </td>
@@ -4354,7 +4354,7 @@ However, most authors do not need detailed understanding of the algorithms since
 										<td><a href="#img" class="role-reference"><code>img</code></a></td>
 										<td>Always</td>
 										<td>No</td>
-										<td>guidance</td>
+										<td>For the HTML <code>img</code> element, use the <code>alt</code> attribute. For other elements with the <code>img</code> role, use <code>aria-labelledby</code> or <code>aria-label</code>.</td>
 									</tr>
 									<tr>
 										<td><a href="#link" class="role-reference"><code>link</code></a></td>
@@ -4388,7 +4388,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="#main" class="role-reference"><code>main</code></a></td>
-										<td>namerequired</td>
+										<td>Sometimes</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4436,7 +4436,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="#navigation" class="role-reference"><code>navigation</code></a></td>
-										<td>namerequired</td>
+										<td>Sometimes</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4550,7 +4550,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="#tab" class="role-reference"><code>tab</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
