--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2151,6 +2151,43 @@
       </section>
     </section>
 
+    <section class="widget" id="meter">
+      <h3>Meter or Guage</h3>
+      <p>
+        A meter is a non-interactive scalar measurement within a known range, or a fractional value; 
+        for example disk usage, the relevance of a query result, or the fraction of a voting population 
+        to have selected a particular candidate. This can also be known as a gauge.
+      </p>
+      <section class="notoc">
+        <h4>Examples</h4>
+        <p><a href="examples/meter/meter.html">Meter Example</a></p>
+      </section>
+      <section id="meter_kbd_interaction" class="notoc">
+        <h4>Keyboard Interaction</h4>
+        <p>Not applicable</p>
+      </section>
+      <section id="meter_roles_states_props" class="notoc">
+        <h4>WAI-ARIA Roles, States, and Properties</h4>
+        <ul>
+          <li>The element serving as the meter has role <a class="role-reference" href="#meter">meter</a>.</li>
+          <li>The meter element has the <a class="property-reference" href="#aria-valuenow">aria-valuenow</a> property set to a decimal value representing the current value of the meter.</li>
+          <li>The meter element has the <a class="property-reference" href="#aria-valuemin">aria-valuemin</a> property set to a decimal value representing the minimum allowed value of the meter.</li>
+          <li>The meter element has the <a class="property-reference" href="#aria-valuemax">aria-valuemax</a> property set to a decimal value representing the maximum allowed value of the meter.</li>
+          <li>
+          If the value of <code>aria-valuenow</code> is not user-friendly, e.g., the day of the week is represented by a number, the
+          <a class="property-reference" href="#aria-valuetext">aria-valuetext</a>
+          property is set to a string that makes the slider value understandable, e.g., &quot;Monday&quot;.
+          </li>
+          <li>
+            If the meter has a visible label, it is referenced by
+            <a href="#aria-labelledby" class="property-reference">aria-labelledby</a> on the meter element.
+            Otherwise, the meter element has a label provided by
+            <a href="#aria-label" class="property-reference">aria-label</a>.
+          </li>
+        </ul>
+      </section>      
+    </section>
+
     <section class="widget" id="radiobutton">
       <h3>Radio Group</h3>
       <p>
