changed header cells from using aria-label to abbr attribute

--- a/examples/datepicker/datepicker-combobox.html
+++ b/examples/datepicker/datepicker-combobox.html
@@ -135,13 +135,13 @@
             aria-labelledby="id-dialog-label">
             <thead>
               <tr>
-                <th scope="col" aria-label="Sunday">Su</th>
-                <th scope="col" aria-label="Monday">Mo</th>
-                <th scope="col" aria-label="Tuesday">Tu</th>
-                <th scope="col" aria-label="Wednesday">We</th>
-                <th scope="col" aria-label="Thursday">Th</th>
-                <th scope="col" aria-label="Friday">Fr</th>
-                <th scope="col" aria-label="Saturday">Sa</th>
+                <th scope="col" abbr="Sunday">Su</th>
+                <th scope="col" abbr="Monday">Mo</th>
+                <th scope="col" abbr="Tuesday">Tu</th>
+                <th scope="col" abbr="Wednesday">We</th>
+                <th scope="col" abbr="Thursday">Th</th>
+                <th scope="col" abbr="Friday">Fr</th>
+                <th scope="col" abbr="Saturday">Sa</th>
               </tr>
             </thead>
 
