fixed bugs with buttons for changing the next/previous year and month buttons

--- a/examples/datepicker/datepicker-combobox.html
+++ b/examples/datepicker/datepicker-combobox.html
@@ -277,7 +277,7 @@
         </thead>
         <tbody>
             <tr>
-                <th><kbd>Down Arrow</kbd></th>
+                <th><kbd>Down Arrow</kbd>, <kbd>Enter</kbd></th>
                 <td>
                   <ul>
                     <li>Open the date picker dialog.</li>
