Move to-dos that depend on resolution of other issues into github issues

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4645,7 +4645,7 @@ However, most authors do not need detailed understanding of the algorithms since
               <dt><code>fieldset</code></dt>
               <dd>The first child <code>legend</code> element.</dd>
 
-              <dt>Other form elements (to-do: see <a href="https://github.com/w3c/html-aam/issues/210">html-aam issue 210</a>)</dt>
+              <dt>Other form elements</dt>
               <dd>The associated <code>label</code> element(s).</dd>
 
               <dt><code>figure</code></dt>
@@ -4673,10 +4673,10 @@ However, most authors do not need detailed understanding of the algorithms since
               <dd>A localized string of the word "reset".</dd>
 
               <dt><code>input</code> whose <code>type</code> attribute is in the Image Button state</dt>
-              <dd>The <code>title</code> attribute. Otherwise, a localized string of the phrase "Submit Query". (To-do: see <a href="https://github.com/w3c/html-aam/issues/211">html-aam issue 211</a>)</dd>
+              <dd>The <code>title</code> attribute. Otherwise, a localized string of the phrase "Submit Query".</dd>
 
               <dt><code>summary</code></dt>
-              <dd>The word "Details". (To-do: see <a href="https://github.com/w3c/html-aam/issues/212">html-aam issue 212</a>)</dd>
+              <dd>The word "Details".</dd>
 
               <dt>Other elements</dt>
               <dd>The <code>title</code> attribute.</dd>
